testdata/baselines/reference/compiler/tluaColonFunctionDeclarations.errors.txt
tluaColonFunctionDeclarations.tlua(24,7): error TS2345: Argument of type 'number' is not assignable to parameter of type '{ count: number; inc(self: any, by: number): number; read(self: any): number; double(self: any): number; }'.
tluaColonFunctionDeclarations.tlua(25,10): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
tluaColonFunctionDeclarations.tlua(28,3): error TS2554: Expected 2 arguments, but got 1.


==== tluaColonFunctionDeclarations.tlua (3 errors) ====
    local M = { count = 0 };
    
    // The colon form is sugar for an explicit first parameter, so `self` is in scope
    // with the type of the table being extended.
    function M:inc(by: number): number
      self.count = self.count + by;
      return self.count;
    end
    
    function M:read(): number
      return self.count;
    end
    
    // A colon method still reaches the table's other members through `self`.
    function M:double(): number
      return self.inc(self, self.read(self));
    end
    
    // Calls pass the receiver explicitly, or implicitly with the colon form.
    local a = M.inc(M, 1);
    local b = M:read();
    
    // The receiver is checked like any other parameter.
    M.inc(1, 1);
          ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type '{ count: number; inc(self: any, by: number): number; read(self: any): number; double(self: any): number; }'.
    M.inc(M, "x");
             ~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    
    // And it is not optional.
    M.inc(1);
      ~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 tluaColonFunctionDeclarations.tlua:5:16: An argument for 'by' was not provided.
    